wip/teams/team3-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: age
  namespace: $SENTENCES_AGE_NS
  labels:
    app.kubernetes.io/part-of: sentences
spec:
  http:
  - route:
    - destination:
        host: age.$SENTENCES_AGE_NS.svc.cluster.local
